# Rconnman2

./: README.md  meson.build
builddir/: build.ninja  compile_commands.json
builddir/meson-logs/: meson-log.txt
data/: Application.css  com.github.rippieuk.rconnman.appdata.xml  com.github.rippieuk.rconnman.desktop  com.github.rippieuk.rconnman.gresource.xml  com.github.rippieuk.rconnman2.desktop  gschema.xml  hosts.json  meson.build
src/: Application.vala  HostConfig.vala
src/Widgets/: AboutDialog.vala  HeaderBar.vala  LeftPaneView.vala  MainView.vala  MainWindow.vala  Preferences.vala  Sidebar.vala  WelcomeView.vala
